--- a/app/src/main/res/layout/fragment_form.xml
+++ b/app/src/main/res/layout/fragment_form.xml
@@ -22,7 +22,7 @@
         android:id="@+id/tv_medicine_form"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="약 제형"
+        android:text="@string/form"
         style="@style/subtitle_b"
         android:textColor="@color/dark_gray"
         android:layout_marginStart="10dp"
@@ -58,7 +58,7 @@
         android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="72dp"
-        android:text="다음"
+        android:text="@string/next"
         android:enabled="false"
         style="@style/subtitle_b"
         android:textColor="@color/dark_gray"
