--- a/app/src/main/res/layout/fragment_name.xml
+++ b/app/src/main/res/layout/fragment_name.xml
@@ -23,7 +23,7 @@
         android:id="@+id/tv_medicine_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="약 이름"
+        android:text="@string/medicine_name"
         android:textColor="@color/dark_gray"
         style="@style/subtitle_b"
         android:layout_marginStart="10dp"
@@ -35,7 +35,7 @@
         android:id="@+id/tv_medicine_name_explanation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="복용하는 약 종류\n및 이름을 작성하세요"
+        android:text="@string/medicine_name_explanation"
         android:maxLines="2"
         android:textColor="@color/dark_gray"
         style="@style/subtitle_b"
@@ -71,7 +71,7 @@
         android:id="@+id/et_medicine_name"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:hint="입력해주세요"
+        android:hint="@string/hint_medicine_name"
         android:textColorHint="@color/gray"
         android:inputType="text|textMultiLine"
         android:scrollHorizontally="false"
@@ -99,7 +99,7 @@
         android:id="@+id/btn_next"
         android:layout_width="match_parent"
         android:layout_height="72dp"
-        android:text="다음"
+        android:text="@string/next"
         style="@style/subtitle_b"
         android:enabled="false"
         android:textColor="@color/dark_gray"
