--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -21,7 +21,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="약통"
+        android:text="@string/title"
         style="@style/headline_b"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/iv_medicine_search"
