--- a/app/src/main/res/layout/bottomsheet_searchfilter.xml
+++ b/app/src/main/res/layout/bottomsheet_searchfilter.xml
@@ -19,9 +19,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="증상 혹은 부위를 선택해 주세요"
+            android:text="@string/search_filter"
             android:layout_weight="1"
             style="@style/subtitle_b"
             android:textAlignment="center"/>
