--- a/app/src/main/res/layout/dialog_timepicker.xml
+++ b/app/src/main/res/layout/dialog_timepicker.xml
@@ -12,7 +12,7 @@
         android:layout_height="60dp"
         style="@style/subtitle_b"
         android:background="@drawable/user_cl_bg_green_radius_top"
-        android:text="알림 시간 설정하기"
+        android:text="@string/alarm_settings"
         android:textColor="@color/white"
         android:padding="16dp"
         android:textSize="18sp"
@@ -39,7 +39,7 @@
             android:id="@+id/btn_cancel"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:text="취소"
+            android:text="@string/cancel"
             android:textColor="@color/white"
             style="@style/body_b"
             android:layout_marginStart="32dp"
@@ -52,7 +52,7 @@
             android:id="@+id/btn_save"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:text="저장"
+            android:text="@string/save"
             android:textColor="@color/white"
             style="@style/body_b"
             android:layout_marginEnd="32dp"
