--- a/app/src/main/res/layout/firebase_sample_layout.xml
+++ b/app/src/main/res/layout/firebase_sample_layout.xml
@@ -8,7 +8,7 @@
         android:id="@+id/button_set"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="set"
+        android:text="@string/set"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
