--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -66,7 +66,7 @@
                 android:layout_marginEnd="1dp"
                 android:background="@null"
                 android:layout_marginStart="4dp"
-                android:hint="검색어를 적어 주세요."
+                android:hint="@string/hint_search"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:inputType="text"
