--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -19,12 +19,12 @@
         app:layout_constraintTop_toBottomOf="@+id/search_lo_tab">
 
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="240dp"
+            android:layout_height="240dp"
 
             android:scaleType="fitCenter"
-            android:src="@drawable/medicine_search"
-            app:tint="@color/any_200"
+            android:src="@drawable/logo_big_trans"
+            app:tint="#EEEEEE"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -61,18 +61,18 @@
 
             <EditText
                 android:id="@+id/search_et_searchtext"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_marginEnd="1dp"
+                android:paddingEnd="32dp"
                 android:background="@null"
                 android:layout_marginStart="4dp"
                 android:hint="@string/hint_search"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:inputType="text"
+                android:imeOptions="actionDone"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/search_btn_search"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
