Feed : search - 검색화면 로고 변경

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -45,7 +45,7 @@
             android:layout_height="64dp"
 
             android:scaleType="fitCenter"
-            android:src="@drawable/logo_final"
+            android:src="@drawable/logo_big"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
