--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="green">#21B052</color>
+    <color name="dark_green">#046E28</color>
     <color name="dark_gray">#5C5C5C</color>
     <color name="gray">#B7B7B7</color>
     <color name="light_gray">#E9E9E9</color>
