--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:elevation="0dp"
     tools:context=".ui.home.HomeFragment">
 
 
@@ -183,7 +184,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="14dp"
             android:layout_marginTop="8dp"
-            android:text="나랑 가까운 약국"
+            android:text="즐겨찾기한 약국"
             app:layout_constraintStart_toEndOf="@+id/home_connection_2_icon"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -192,7 +193,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="약샤라샤라 샬라샬라"
+            android:text="내가 찜한 약국 확인"
             app:layout_constraintStart_toStartOf="@+id/home_connection_2_title"
             app:layout_constraintTop_toBottomOf="@+id/home_connection_2_title" />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -227,7 +228,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="14dp"
             android:layout_marginTop="8dp"
-            android:text="나랑 가까운 약국"
+            android:text="이게 무슨 약이지?"
             app:layout_constraintStart_toEndOf="@+id/home_connection_3_icon"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -236,26 +237,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="약샤라샤라 샬라샬라"
+            android:text="모르는 약이 있을 땐? 샤라샤라샬라샬라"
             app:layout_constraintStart_toStartOf="@+id/home_connection_3_title"
             app:layout_constraintTop_toBottomOf="@+id/home_connection_3_title" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/btn_add_medicine_group"
-        style="@style/subtitle_b"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="30dp"
-        android:backgroundTint="@color/green"
-        android:text="복약 등록"
-        android:textColor="@color/white"
-        app:icon="@drawable/baseline_add_14"
-        app:iconGravity="start"
-        app:iconTint="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/btn_add_medicine_container"
@@ -274,13 +259,13 @@
             android:layout_width="160dp"
             android:layout_height="48dp"
             android:background="@drawable/round_rect_500_bottom"
+            android:elevation="0dp"
             android:gravity="center"
             android:paddingHorizontal="16dp"
-            android:text="1번 버튼"
-            android:textColor="@color/black"
-            android:elevation="0dp"
-            app:iconTint="@color/white"
             android:stateListAnimator="@null"
+            android:text="직접 등록"
+            android:textColor="@color/black"
+            app:iconTint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -300,16 +285,37 @@
             android:layout_width="160dp"
             android:layout_height="48dp"
             android:background="@drawable/round_rect_500_top"
+            android:elevation="0dp"
             android:gravity="center"
             android:paddingHorizontal="16dp"
-            android:text="2번 버튼"
-            android:textColor="@color/black"
-            android:elevation="0dp"
-            app:iconTint="@color/white"
             android:stateListAnimator="@null"
+            android:text="사진 등록"
+            android:textColor="@color/black"
+            app:iconTint="@color/white"
             app:layout_constraintBottom_toTopOf="@+id/btn_add_medicine_divider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_add_medicine_group"
+        style="@style/subtitle_b"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/round_long_rect_500"
+        android:backgroundTint="@color/green"
+        android:text="+ 복약 등록"
+        android:textColor="@color/white"
+        android:stateListAnimator="@null"
+        android:translationZ="4dp"
+        app:elevation="0dp"
+        app:icon="@drawable/baseline_add_14"
+        app:iconGravity="start"
+        app:iconTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
