--- a/app/src/main/res/layout/fragment_name.xml
+++ b/app/src/main/res/layout/fragment_name.xml
@@ -14,7 +14,7 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:src="@drawable/baseline_arrow_back_24dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -23,77 +23,144 @@
         android:id="@+id/tv_medicine_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/medicine_name"
+        android:text="약 등록하기"
         android:textColor="@color/dark_gray"
         style="@style/subtitle_b"
         android:layout_marginStart="10dp"
-        app:layout_constraintTop_toTopOf="@id/iv_back"
         app:layout_constraintBottom_toBottomOf="@id/iv_back"
         app:layout_constraintStart_toEndOf="@id/iv_back"/>
 
-    <TextView
-        android:id="@+id/tv_medicine_name_explanation"
-        android:layout_width="wrap_content"
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/medicine_name_explanation"
-        android:maxLines="2"
-        android:textColor="@color/dark_gray"
-        style="@style/subtitle_b"
-        android:layout_marginTop="72dp"
-        android:layout_marginStart="12dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_medicine_name"
-        app:layout_constraintStart_toStartOf="@id/iv_back"/>
-
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/iv_back"/>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_medicine_name"
+        android:id="@+id/cl_guide"
         android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/name_cl_bg_light_green_radius"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/divider">
+
+        <TextView
+            android:id="@+id/tv_guide"
+            style="@style/subtitle_b"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="약 등록 안내"
+            android:textColor="@color/back_700"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_guide_particular"
+            style="@style/body"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:lineSpacingExtra="8dp"
+            android:text="@string/medicine_guide_particular"
+            android:textColor="@color/back_700"
+            app:layout_constraintStart_toStartOf="@id/tv_guide"
+            app:layout_constraintTop_toBottomOf="@id/tv_guide" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_medicine_form"
+        android:layout_width="75dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:layout_marginHorizontal="28dp"
-        android:background="@drawable/user_tv_stroke_light_pink_12dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_medicine_name_explanation"
-        app:layout_constraintStart_toStartOf="@id/iv_back">
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:clickable="true"
+        app:layout_constraintTop_toBottomOf="@id/cl_guide"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <ImageView
-            android:id="@+id/iv_medicine"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:src="@drawable/medicine"
-            android:layout_marginStart="20dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+    <ImageButton
+        android:id="@+id/btn_medicine_form"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:scaleType="centerCrop"
+        android:background="@drawable/medicine_type_1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
+            android:gravity="center"
+            android:text="편집"
+            style="@style/caption"
+            android:textColor="@color/gray"
+            android:background="@drawable/user_cl_bg_light_gray_radius"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
         android:id="@+id/et_medicine_name"
-        android:layout_width="240dp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:hint="@string/hint_medicine_name"
         android:textColorHint="@color/gray"
         android:inputType="text|textMultiLine"
         android:scrollHorizontally="false"
         style="@style/body_b"
-        android:background="@android:color/transparent"
-        android:padding="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/iv_medicine"
-        app:layout_constraintEnd_toStartOf="@id/iv_delete"/>
+        android:layout_marginStart="16dp"
+        android:padding="8dp"
+        android:paddingStart="16dp"
+        android:background="@drawable/user_tv_stroke_light_pink_12dp"
+        app:layout_constraintTop_toTopOf="@id/cl_medicine_form"
+        app:layout_constraintBottom_toBottomOf="@id/cl_medicine_form"
+        app:layout_constraintStart_toEndOf="@id/cl_medicine_form" />
+    
+    <ImageButton
+        android:id="@+id/btn_plus_minus"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/ic_plus"
+        app:layout_constraintTop_toTopOf="@id/et_medicine_name"
+        app:layout_constraintBottom_toBottomOf="@id/et_medicine_name"
+        app:layout_constraintStart_toEndOf="@id/et_medicine_name"/>
 
-        <ImageView
-            android:id="@+id/iv_delete"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:src="@drawable/baseline_cancel_24dp"
-            android:layout_margin="20dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/cl_medicine_form"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/divider2"
+        app:layout_constraintBottom_toTopOf="@id/tv_size"/>
+
+    <TextView
+        android:id="@+id/tv_size"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:padding="8dp"
+        style="@style/body"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_next"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_next"
