--- a/app/src/main/res/drawable/user_cl_bg_white_gradient_gray.xml
+++ b/app/src/main/res/drawable/user_cl_bg_white_gradient_gray.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="20dp"/>
@@ -8,6 +9,7 @@
                 android:endColor="@color/gray"
                 android:angle="90"/>
         </shape>
+
     </item>
 
     <!-- 내부 흰색 배경 -->
@@ -15,6 +17,9 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
             <corners android:radius="20dp"/>
+
+            <stroke android:color="@color/black"
+                android:width="1dp"/>
         </shape>
     </item>
 </layer-list>
