feat : 맵 프래그먼트에서 리스트 출력 완료 (즐겨찾기 x), fix : 맵 프래그먼트 버튼 추가

--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.map.MapFragment">
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/favorite_list"
+        android:id="@+id/btn_favorite_list"
         style="@style/body"
         android:layout_width="40dp"
         android:layout_height="40dp"
