--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -4,24 +4,35 @@
         <item name="fontFamily">@font/pretendard</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">28sp</item>
+        <item name="android:fontWeight">700</item>
     </style>
 
     <style name="subtitle_b">
         <item name="fontFamily">@font/pretendard</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">24sp</item>
+        <item name="android:fontWeight">700</item>
+    </style>
+
+    <style name="medium_b">
+        <item name="fontFamily">@font/pretendard</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontWeight">700</item>
     </style>
 
     <style name="body_b">
         <item name="fontFamily">@font/pretendard</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:fontWeight">700</item>
     </style>
 
     <style name="caption_b">
         <item name="fontFamily">@font/pretendard</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">12sp</item>
+        <item name="android:fontWeight">700</item>
     </style>
 
     <style name="headline">
@@ -34,6 +45,12 @@
         <item name="fontFamily">@font/pretendard</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="medium">
+        <item name="fontFamily">@font/pretendard</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">20sp</item>
     </style>
 
     <style name="body_big">
