--- a/app/src/main/res/layout/bottomsheet_map_list.xml
+++ b/app/src/main/res/layout/bottomsheet_map_list.xml
@@ -6,7 +6,7 @@
     android:id="@+id/bottomsheet_map_list_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/bottom_sheet_white_20"
     android:paddingTop="20dp"
     android:paddingBottom="16dp"
     app:behavior_draggable="true"
